# alfa

./: .gitignore  Cargo.toml  README.md  pkg_order.toml
instructions/: packages.toml  pkg_order.toml
instructions/cross-compiler/: linux-headers.toml
src/: build_meta.rs  config.rs  downloader.rs  instruction.rs  lib.rs  prepare.rs  profile.rs  tui.rs
